# document-consolidation-toolkit

./: .gitignore  CLAUDE.md  CONFIGURATION.md  LICENSE  PHASE1_COMPLETE.md  README.md  REFACTORING_SUMMARY.md  STATUS.md  config.example.yaml  pyproject.toml  requirements.txt  verify_config.py
src/document_consolidation/: __init__.py  __main__.py  cli.py
src/document_consolidation/config/: __init__.py  logging_config.py  settings.py
src/document_consolidation/core/: __init__.py  extractor.py  integrator.py  tournament.py  verifier.py
src/document_consolidation/models/: __init__.py  document.py
src/document_consolidation/storage/: __init__.py  document_repository.py  filesystem_repository.py
tests/: conftest.py
tests/integration/: test_configuration.py  test_full_workflow.py
tests/unit/: test_extractor.py  test_integrator.py  test_models.py  test_repository.py  test_tournament.py  test_verifier.py
